# UniC

./: .gitignore  AllocationUtils.c  AllocationUtils.h  Arrays.c  Arrays.h  BinaryTree.c  BinaryTree.h  CMakeLists.txt  DataHolder.c  DataHolder.h  Dictionary.c  Dictionary.h  DocUI.sh  HashFunctions.c  HashFunctions.h  LinkedList.c  LinkedList.h  Log.c  Log.h  Makefile  Math.c  Math.h  Matrix.c  Matrix.h  Nodes.c  Nodes.h  Output.c  Output.h  Queue.c  Queue.h  README.md  Search.c  Search.h  SetList.c  SetList.h  Sorting.c  Sorting.h  Stack.c  Stack.h  StringFX.c  (+17 more)
Algebra/Complex/: Complex.c
Algebra/Matrix/: Matrix.c  Matrix.h
Algebra/Vector/: Vector.c  Vector.h
Algorithms/Search/: Search.c  Search.h
Algorithms/Sort/: Sorting.c  Sorting.h
DataStructures/Array/: Arrays.c  Arrays.h
DataStructures/Dictionary/: Dictionary.c  Dictionary.h
DataStructures/Graph/: Edge.c  Explore.c  Graph.c  Graph.h  GraphNode.c  GraphNode.h  Pathfinding.c  Utils.c  Vertex.c
DataStructures/Heap/: Heap.c  Heap.h  HeapEntry.c
DataStructures/LinkedList/: DoubleLinkedList.c  DoubleLinkedList.h  LinkedList.c  LinkedList.h
DataStructures/Nodes/: Nodes.c  Nodes.h
DataStructures/Queue/: Queue.c  Queue.h
DataStructures/Stack/: Stack.c  Stack.h
Linux commands/: Cat.c
NeuralNetwork/: CSV.c  CSV.h
Utils/: types.h
doc/: doc.json  docdb_gen.py  docfile_gen.py
doc/backend/: go.mod  (+1 more)
examples/: examplegraph.c  examples.h  graphdraw.c
include/: binarytree.h  bst.h  comparators.h  conversion.h  dealloc.h  dictionary.h  doublelinkedlist.h  examples.h  graph.h  hashfunctions.h  heap.h  linkedlist.h  nodes.h  queue.h  sorting.h  stack.h
libft/: ft_lstadd_back.c  ft_lstadd_front.c  ft_lstclear.c  ft_lstdelone.c  ft_lstiter.c  ft_lstlast.c  ft_lstmap.c  ft_lstnew.c  ft_lstsize.c  ft_strdup.c  ft_strncmp.c  libft.h
unic/: binarytree.h  bst.h  colors.h  comparators.h  complex.h  conversion.h  dealloc.h  dictionary.h  doublelinkedlist.h  examples.h  graph.h  hashfunctions.h  heap.h  linkedlist.h  logging.h  mathutils.h  matrix.h  nodes.h  queue.h  search.h  shared_rsc.h  sorting.h  stack.h  types.h  uvector2.h  vector.h
(+71 files in other folders)
